--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -332,7 +332,8 @@ or as pull requests to the source repository hosted at
 \begin{center}
 \small \url{http://github.com/neitzke/qft-geometry}
 \end{center}
-I thank Arun Debray, Robbie Rosati and Ivan Tulli for very helpful
+I thank Arun Debray, Behzat Ergun, Robbie Rosati 
+and Ivan Tulli for very helpful
 suggestions and corrections.
 
 You can join a Slack channel for the course (needs {\tt {@math.utexas.edu}} address)
@@ -953,7 +954,7 @@ singularity at $\lambda = 0$, in the sense of the next exercise.
 \begin{exercise} Do the following things.
 \begin{enumerate}
 \item Show that $Z(m,\lambda) = \frac{1}{\sqrt{m}} f(\tilde\lambda)$ for some $f$.
-\item Show that $Z(m,\lambda)$ obeys the differential equation $4 \partial_m^2 Z = (4!)^4 \partial_\lambda^4 Z$.
+\item Show that $Z(m,\lambda)$ obeys the differential equation $(2\partial_m)^2 Z = -(4! \partial_\lambda) Z$.
 \item Show that $f(\tilde\lambda)$ obeys an ordinary differential equation in $\tilde\lambda$,
 with an irregular singularity at $\tilde\lambda = 0$.
 \item Show that, for fixed $m$, $Z(m, \lambda)$ admits analytic continuation to a branched cover of $\C \setminus \{ 0 \}$
